= Changelog

== next mini

* ADDED: DomainName#valid?

* CHANGED: Make sure RuleList lookup is only performed once.


== Release 0.1.0

* Initial version
